# visual

./: README.md  client.py  server.py  serverr.py
4sem/: CMakeLists.txt  server_zmq.cpp
4sem/src/: main.cpp
AndroidProject/app/: build.gradle.kts
AndroidProject/app/src/main/: AndroidManifest.xml
AndroidProject/app/src/main/java/com/example/appandroid/: CalcActivity.kt  ClientActivity.kt  LocationActivity.kt  MainActivity.kt  MediaActivity.kt
AndroidProject/app/src/main/res/layout/: activity_calc.xml  activity_client.xml  activity_location.xml  activity_main.xml  activity_media.xml
andr/app/: build.gradle.kts
andr/app/src/main/java/com/example/myapplication/: LocationActivity.kt  MainActivity.kt  MediaPlayerActivity.kt  NetworkActivity.kt
andr/app/src/main/java/com/example/myapplication/Movable/: 1.kt  Human.kt  Movable.kt  driver.kt  main.kt  string.kt
andr/app/src/main/java/com/example/myapplication/data/: LocationData.kt
andr/app/src/main/java/com/example/myapplication/services/: LocationService.kt
andr/app/src/main/java/com/example/myapplication/supp/: FileUtils.kt
andr/app/src/main/res/layout/: activity_location.xml  activity_main.xml  activity_media_player.xml  activity_network.xml
andr/gradle/wrapper/: gradle-wrapper.properties
popit/: settings.gradle.kts
popit/app/: build.gradle.kts
popit/app/src/main/: AndroidManifest.xml
popit/app/src/main/java/com/example/popit/: CalculatorActivity.kt  ClientActivity.kt  LocationActivity.kt  MainActivity.kt  MediaPlayerActivity.kt
popit/app/src/main/res/layout/: activity_calculator.xml  activity_client.xml  activity_location.xml  activity_main.xml  activity_media_player.xml
popit/app/src/main/res/values/: strings.xml  themes.xml
popit/app/src/main/res/values-night/: themes.xml
popit/gradle/wrapper/: gradle-wrapper.properties
visual/src/: Human.kt  Human2.kt  README.md  main.kt
visual/src/laba1/: 1.kt  Human.kt  Human2.kt  Movable.kt  README.md  driver.kt  main.kt  string.kt
visual/src/laba2/: 2.kt  Human.kt  Movable.kt  driver.kt  main.kt
visual/src/laba4/: AndroidManifest.xml  MainActivity.kt  activity_main.xml
